# ncnn

./: .gitignore
examples/: CMakeLists.txt  draft.cpp
src/: CMakeLists.txt  modelbin.cpp  net.cpp  net.h
src/layer/: mylayer.cpp  mylayer.h
tests/: CMakeLists.txt  model-mylayer.param  test_mylayer.cpp
tools/: CMakeLists.txt  convert.sh  ncnnoptimize.cpp  net_output.cpp
tools/quantize/: CMakeLists.txt  README.md  generate_annotation.py  ncnn2table.cpp  validate_classify.cpp
